Update Bot version. Add net 9 support

--- a/src/SkyNeg.Telegram.BotCore.ExampleWebHookBot/appsettings.json
+++ b/src/SkyNeg.Telegram.BotCore.ExampleWebHookBot/appsettings.json
@@ -13,7 +13,7 @@
   "TelegramBot": {
     "Token": "",
     "ContextOptions": {
-      "ConnectionString": "Data Source=./.data/core.db"
+      "ConnectionString": "Data Source=./core.db"
     },
     "DefaultCommand": "botinfo",
     "Webhook": {
