--- a/.github/workflows/pacakge.yml
+++ b/.github/workflows/pacakge.yml
@@ -18,24 +18,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v2
-
     - name: Restore dependencies
-      run: nuget restore $SOLUTION
+      run: dotnet restore ${{ env.SOLUTION }}
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9.0.x
 
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      run: dotnet build ${{ env.SOLUTION }} --configuration  ${{ env.BUILD_CONFIG }} --no-restore
 
     - name: Pack Nuget
-      run: dotnet pack $PROJECT --configuration $BUILD_CONFIG
+      run: dotnet pack ${{ env.PROJECT }} --configuration  ${{ env.BUILD_CONFIG }}
 
     - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push src/SkyNeg.Telegram.BotCore.Http/**/*.nupkg -k ${PUBLISHER_TOKEN} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols 
+      run: dotnet nuget push src/SkyNeg.Telegram.BotCore.Http/**/*.nupkg -k ${{ env.PUBLISHER_TOKEN }} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols 
       env:
         PUBLISHER_TOKEN: ${{secrets.PUBLISHER_TOKEN}}
