--- a/src/SkyNeg.Telegram.BotCore.Http/SkyNeg.Telegram.BotCore.Http.csproj
+++ b/src/SkyNeg.Telegram.BotCore.Http/SkyNeg.Telegram.BotCore.Http.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net7.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Authors>Kirill Skripka</Authors>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -17,12 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SkyNeg.Telegram.Bot.Abstraction" Version="1.0.0" />
+    <PackageReference Include="SkyNeg.Telegram.Bot.Abstraction" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
