--- a/.github/workflows/pacakge.yml
+++ b/.github/workflows/pacakge.yml
@@ -12,7 +12,7 @@ jobs:
       SOLUTION: "src/SkyNeg.Telegram.BotCore.Http.sln"
       PROJECT: "src/SkyNeg.Telegram.BotCore.Http/SkyNeg.Telegram.BotCore.Http.csproj"
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout
